--- a/apps/extension/_raw/_locales/ja/messages.json
+++ b/apps/extension/_raw/_locales/ja/messages.json
@@ -1557,5 +1557,20 @@
   },
   "Contacts": {
     "message": "連絡先"
+  },
+  "I_already_have_an_account": {
+    "message": "アカウントを持っています"
+  },
+  "Get_Started_with_Flow_wallet": {
+    "message": "Flowウォレットを使用してみる"
+  },
+  "Welcome_to_Flow_Wallet": {
+    "message": "Flowウォレットへようこそ！"
+  },
+  "Create_an_account_to_get_started": {
+    "message": "アカウントを作成して開始します。"
+  },
+  "By_using_Flow_Wallet_you_agree_to_the": {
+    "message": "Flowウォレットを使用することで、"
   }
 }
