fixed: update i18n tags
Closes #1024

--- a/apps/extension/_raw/_locales/en/messages.json
+++ b/apps/extension/_raw/_locales/en/messages.json
@@ -1579,7 +1579,7 @@
   "Create_an_account_to_get_started": {
     "message": "Create an account to get started."
   },
-  "By_using_Flow_Wallet_you_agree_to_the": {
-    "message": "By using Flow Wallet you agree to the {{TERMS_LINK}} and {{PRIVACY_LINK}}"
+  "legal_text": {
+    "message": "By using Flow Wallet you agree to our <termslink>Terms of Service</termslink> and <privacylink>Privacy Policy</privacylink>"
   }
 }
