fixed: import profile
Closes #1142

--- a/apps/extension/_raw/_locales/en/messages.json
+++ b/apps/extension/_raw/_locales/en/messages.json
@@ -1511,7 +1511,7 @@
     "message": "Profiles"
   },
   "Recover_an_existing_profile": {
-    "message": "Recover an existing profile"
+    "message": "Import an existing profile"
   },
   "Create_a_new_profile": {
     "message": "Create a new profile"
