--- a/apps/extension/_raw/_locales/ru/messages.json
+++ b/apps/extension/_raw/_locales/ru/messages.json
@@ -1502,7 +1502,7 @@
     "message": "Профили"
   },
   "Recover_an_existing_profile": {
-    "message": "Восстановить существующий профиль"
+    "message": "Импортировать существующий профиль"
   },
   "Create_a_new_profile": {
     "message": "Создать новый профиль"
