--- a/apps/react-native/src/locales/en.json
+++ b/apps/react-native/src/locales/en.json
@@ -32,7 +32,8 @@
     "to": "To",
     "amount": "Amount",
     "fee": "Fee",
-    "total": "Total"
+    "total": "Total",
+    "inaccessible": "Inaccessible"
   },
   "buttons": {
     "back": "Back",
