feat: update “select token” to “Send”

--- a/apps/react-native/src/locales/en.json
+++ b/apps/react-native/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "navigation": {
     "home": "Home",
-    "selectTokens": "Select Tokens",
+    "selectTokens": "Send",
     "sendTo": "Send To",
     "confirmation": "Summary",
     "colorDemo": "Color Demo",
