--- a/apps/react-native/src/locales/es.json
+++ b/apps/react-native/src/locales/es.json
@@ -1,7 +1,7 @@
 {
   "navigation": {
     "home": "Inicio",
-    "selectTokens": "Seleccionar Tokens",
+    "selectTokens": "Enviar",
     "sendTo": "Enviar a",
     "confirmation": "Confirmación",
     "colorDemo": "Demo de Colores",
