--- a/apps/react-native/src/locales/ru.json
+++ b/apps/react-native/src/locales/ru.json
@@ -1,7 +1,7 @@
 {
   "navigation": {
     "home": "Главная",
-    "selectTokens": "Выбрать токены",
+    "selectTokens": "Отправить",
     "sendTo": "Отправить в",
     "confirmation": "Подтверждение",
     "colorDemo": "Демо цветов",
