--- a/apps/react-native/src/locales/zh.json
+++ b/apps/react-native/src/locales/zh.json
@@ -1,7 +1,7 @@
 {
   "navigation": {
     "home": "首页",
-    "selectTokens": "选择代币",
+    "selectTokens": "发送",
     "sendTo": "发送至",
     "confirmation": "确认",
     "colorDemo": "颜色演示",
