fix: remove tamagui from rn

--- a/packages/screens/src/locales/en.json
+++ b/packages/screens/src/locales/en.json
@@ -27,6 +27,7 @@
     "sendTo": {
       "title": "Send To"
     },
+    "toAccount": "To account",
     "searchAddress": "Search address or contact...",
     "selectedToken": "Selected Token",
     "noAccounts": {
