--- a/packages/screens/src/locales/en.json
+++ b/packages/screens/src/locales/en.json
@@ -27,7 +27,7 @@
     "sendTo": {
       "title": "Send To"
     },
-    "toAccount": "To account",
+    "toAccount": "To Account",
     "searchAddress": "Search address or contact...",
     "selectedToken": "Selected Token",
     "noAccounts": {
