--- a/packages/screens/src/locales/es.json
+++ b/packages/screens/src/locales/es.json
@@ -18,6 +18,10 @@
     "error": "Error",
     "success": "Éxito"
   },
+  "tabs": {
+    "tokens": "Tokens",
+    "nfts": "NFTs"
+  },
   "send": {
     "myAccounts": "Mis Cuentas",
     "recent": "Reciente",
