--- a/packages/screens/src/locales/es.json
+++ b/packages/screens/src/locales/es.json
@@ -77,6 +77,15 @@
     "description": "Descripción",
     "creator": "Creador"
   },
+  "messages": {
+    "loading": "Cargando...",
+    "noTokensWithBalance": "No hay tokens con saldo",
+    "noNFTCollectionsForAccount": "No se encontraron colecciones NFT"
+  },
+  "buttons": {
+    "retry": "Reintentar",
+    "refresh": "Actualizar"
+  },
   "errors": {
     "networkError": "Ocurrió un error de red",
     "invalidInput": "Entrada inválida",
