--- a/packages/screens/src/locales/zh.json
+++ b/packages/screens/src/locales/zh.json
@@ -77,6 +77,15 @@
     "description": "描述",
     "creator": "创建者"
   },
+  "messages": {
+    "loading": "加载中...",
+    "noTokensWithBalance": "无余额代币",
+    "noNFTCollectionsForAccount": "未找到NFT收藏"
+  },
+  "buttons": {
+    "retry": "重试",
+    "refresh": "刷新"
+  },
   "errors": {
     "networkError": "网络错误",
     "invalidInput": "输入无效",
