feat: child account accessible and switch account

--- a/packages/screens/src/locales/en.json
+++ b/packages/screens/src/locales/en.json
@@ -79,7 +79,8 @@
     "tokenId": "Token ID",
     "properties": "Properties",
     "description": "Description",
-    "creator": "Creator"
+    "creator": "Creator",
+    "inaccessible": "Inaccessible"
   },
   "messages": {
     "loading": "Loading...",
